# farmbot_ws

./: frames.gv
install/: local_setup.sh  setup.sh
install/farmbot_description/share/farmbot_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/farmbot_description/share/farmbot_description/meshes/: component__2__4.stl
install/farmbot_description/share/farmbot_description/urdf/: farmbot.gazebo  farmbot.xacro  gazebo_control.xacro  gazebo_control_acker.xacro  lidar.xacro  (+1 more)
log/: latest_build  latest_graph  latest_list  latest_test
src/farmbot_description/: CMakeLists.txt  package.xml  setup_archived.cfg  setup_archived.py
src/farmbot_description/Archieved urdf archieved/: farmbot.trans  farmbot.xacro  farmbotWorkingArchieve.xacro  gazebo_control_skid.xacro  materials.xacro
src/farmbot_description/config/: display.rviz
src/farmbot_description/launch/: display.launch.py  gazebo.launch.py  spawn_car.launch.py
src/farmbot_description/meshes/: base_link.stl  component__1__1.stl  component__2__1.stl  component__2__2.stl  component__2__3.stl
src/farmbot_description/scripts/: spawn_bot.py
src/farmbot_description/src/: farmbot_description_node.cpp
src/farmbot_description/urdf/: farmbot.xacro  gazebo_control_acker.xacro  gazebo_control_skid.xacro  gazebo_control_tricycle.xacro  materials.xacro
src/farmbot_description/urdf copy/: farmbot.gazebo  farmbot.trans
src/farmbot_gazebo_plugin/: CMakeLists.txt  package.xml
src/farmbot_gazebo_plugin/src/: farmbot_gazebo_plugin.cpp  farmbot_gazebo_plugin.hpp
