<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>farmbot_description</name>
  <version>0.0.0</version>
  <description>The farmbot_description package</description>
  <maintainer email="todo@todo.com">author</maintainer>
  <license>TODO: License declaration</license>

  
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


<!-- changed build_type to cmake from python -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
